--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublishOnly": "yarn build",
     "build": "tsc -P src",
     "test": "jest",
-    "lint": "eslint . --ext ts,mdx"
+    "lint": "eslint . --ext js,ts,mdx"
   },
   "peerDependencies": {
     "eslint": ">=4.7.0"
@@ -28,20 +28,24 @@
     "unified": "^8.3.2"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^8.1.0",
     "@rxts/eslint-plugin-mdx": "file:config",
     "@types/eslint": "^4.16.6",
     "@types/eslint-visitor-keys": "^1.0.0",
     "@types/estree": "^0.0.39",
     "@types/node": "^12.6.8",
     "@types/unist": "^2.0.3",
+    "commitlint": "^8.1.0",
     "eslint": "^6.1.0",
     "eslint-config-1stg": "~5.4.1",
     "eslint-plugin-jest": "^22.14.0",
     "husky": "^3.0.1",
     "jest": "^24.8.0",
+    "lint-staged": "^9.2.1",
     "prettier": "1.18.2",
     "prettier-config-1stg": "^0.1.0",
     "react": "^16.8.6",
+    "standard-version": "^6.0.1",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
