--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rxts/eslint-plugin-mdx",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "ESLint Parser/Plugin for MDX",
   "repository": "git@github.com:rx-ts/eslint-plugin-mdx.git",
   "author": "JounQin <admin@1stg.me>",
@@ -14,7 +14,7 @@
     "prepublishOnly": "yarn build",
     "build": "tsc -P src",
     "test": "jest",
-    "lint": "eslint . --ext js,ts,mdx"
+    "lint": "eslint . --ext mdx,ts,tsx"
   },
   "peerDependencies": {
     "eslint": ">=4.7.0"
@@ -34,6 +34,7 @@
     "@types/eslint-visitor-keys": "^1.0.0",
     "@types/estree": "^0.0.39",
     "@types/node": "^12.6.8",
+    "@types/react": "^16.8.23",
     "@types/unist": "^2.0.3",
     "commitlint": "^8.1.0",
     "eslint": "^6.1.0",
