--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rxts/eslint-plugin-mdx",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "ESLint Parser/Plugin for MDX",
   "repository": "git@github.com:rx-ts/eslint-plugin-mdx.git",
   "author": "JounQin <admin@1stg.me>",
@@ -14,14 +14,13 @@
     "prepublishOnly": "yarn build",
     "build": "tsc -P src",
     "test": "jest",
-    "lint": "eslint . --ext mdx,ts,tsx"
+    "lint": "eslint . --ext js,mdx,ts,tsx"
   },
   "peerDependencies": {
     "eslint": ">=6.0.0"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.1.0",
-    "eslint-visitor-keys": "^1.0.0",
     "remark-mdx": "^1.1.0",
     "remark-parse": "^7.0.0",
     "remark-stringify": "^7.0.1",
@@ -31,16 +30,15 @@
     "@commitlint/config-conventional": "^8.1.0",
     "@rxts/eslint-plugin-mdx": "file:config",
     "@types/eslint": "^4.16.6",
-    "@types/eslint-visitor-keys": "^1.0.0",
-    "@types/estree": "^0.0.39",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
     "@types/unist": "^2.0.3",
+    "babel-eslint": "^10.0.2",
     "commitlint": "^8.1.0",
     "eslint": "^6.1.0",
     "eslint-config-1stg": "~5.4.1",
     "eslint-plugin-jest": "^22.14.0",
-    "husky": "^3.0.1",
+    "husky": "^3.0.2",
     "jest": "^24.8.0",
     "lint-staged": "^9.2.1",
     "prettier": "1.18.2",
