--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,3 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "declaration": true,
-    "outDir": "../dist"
-  }
+  "extends": "../tsconfig.json"
 }
