--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "declaration": true,
     "esModuleInterop": true,
     "jsx": "preserve",
     "lib": ["esnext"],
     "module": "commonjs",
     "moduleResolution": "node",
+    "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": false,
