--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
+    "strictFunctionTypes": false,
     "strictNullChecks": false,
     "target": "es5"
   }
