--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "eslint": ">=5.0.0"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.1.0",
-    "remark-mdx": "^1.1.0",
+    "remark-mdx": "^1.1.4",
     "remark-parse": "^7.0.0",
     "remark-stringify": "^7.0.1",
     "unified": "^8.3.2"
@@ -39,14 +38,15 @@
     "@commitlint/config-conventional": "^8.1.0",
     "@rxts/eslint-plugin-mdx": "file:config",
     "@types/eslint": "^4.16.6",
+    "@types/jest": "^24.0.16",
     "@types/node": "^12.6.8",
-    "@types/react": "^16.8.23",
+    "@types/react": "^16.8.24",
     "@types/unist": "^2.0.3",
     "babel-eslint": "^10.0.2",
     "commitlint": "^8.1.0",
     "eslint": "^6.1.0",
     "eslint-config-1stg": "~5.4.1",
-    "eslint-plugin-jest": "^22.14.0",
+    "eslint-plugin-jest": "^22.14.1",
     "husky": "^3.0.2",
     "jest": "^24.8.0",
     "lint-staged": "^9.2.1",
@@ -54,6 +54,7 @@
     "prettier-config-1stg": "^0.1.0",
     "react": "^16.8.6",
     "standard-version": "^7.0.0",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
