--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js: --lts
 
 cache: yarn
 
+branches:
+  except:
+    - develop
+
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH="$HOME/.yarn/bin:$PATH"
