--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,14 @@
 {
+  "$schema": "http://json.schemastore.org/lerna",
   "version": "0.9.2",
   "npmClient": "yarn",
-  "packages": ["packages/*"],
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "graphType": "all"
+    },
+    "version": {
+      "allowBranch": "master"
+    }
+  }
 }
