fix: skip combine jsx nodes for root/jsx node
refactor parser, make the API simple

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,6 +13,7 @@
     "strict": true,
     "strictFunctionTypes": false,
     "strictNullChecks": false,
+    "stripInternal": true,
     "target": "es5"
   }
 }
