--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_deploy:
   - git remote set-url origin https://user:$GH_TOKEN@github.com/$TRAVIS_REPO_SLUG.git
   - git fetch origin $TRAVIS_BRANCH:$TRAVIS_BRANCH
   - git checkout $TRAVIS_BRANCH
-  - yarn run standard-version -a --no-verify || echo "nothing changed"
+  - git fetch origin v$(jq -r '.version' package.json) || yarn run standard-version -a --no-verify
 
 deploy:
   provider: script
