--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-mdx",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "ESLint Parser/Plugin for MDX",
   "repository": "git@github.com:rx-ts/eslint-plugin-mdx.git",
   "author": "JounQin <admin@1stg.me>",
@@ -36,6 +36,7 @@
     "jest": "^24.8.0",
     "lerna": "^3.16.4",
     "lint-staged": "^9.2.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "prettier-config-1stg": "^0.1.0",
     "react": "^16.8.6",
