--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,18 @@ language: node_js
 
 node_js: --lts
 
-cache: yarn
+cache:
+  - yarn
+  - directories:
+      - .changelog
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH="$HOME/.yarn/bin:$PATH"
   - git config --global user.name 'JounQin'
   - git config --global user.email 'admin@1stg.me'
+
+install: yarn --frozen-lockfile
 
 script:
   - set -e
@@ -22,11 +27,10 @@ before_deploy:
   - git remote set-url origin https://user:$GH_TOKEN@github.com/$TRAVIS_REPO_SLUG.git
   - git fetch origin $TRAVIS_BRANCH:$TRAVIS_BRANCH
   - git checkout $TRAVIS_BRANCH
-  - git fetch origin v$(jq -r '.version' package.json) || yarn run standard-version -a --no-verify
 
 deploy:
   provider: script
   skip_cleanup: true
-  script: yarn deploy:run && yarn deploy:post || echo "nothing changed to deploy"
+  script: yarn run lerna-changelog && yarn run lerna publish $(jq -r '.version' package.json) --yes
   on:
     branch: master
