--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-mdx",
   "version": "0.9.5",
   "description": "ESLint Parser/Plugin for MDX",
-  "repository": "git@github.com:rx-ts/eslint-plugin-mdx.git",
+  "repository": "git@github.com:rx-ts/eslint-mdx.git",
   "author": "JounQin <admin@1stg.me>",
   "license": "MIT",
   "private": true,
@@ -12,15 +12,13 @@
   "scripts": {
     "build": "tsc -b",
     "test": "jest",
-    "lint": "EFF_NO_LINK_RULES=true eslint . --ext js,mdx,ts,tsx -f friendly",
-    "deploy:run": "lerna publish $(jq -r '.version' package.json) --amend --yes",
-    "deploy:post": "git push --follow-tags origin $TRAVIS_BRANCH"
+    "lint": "EFF_NO_LINK_RULES=true eslint . --ext js,mdx,ts,tsx -f friendly"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^8.1.0",
     "@rxts/eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
     "@types/eslint": "^4.16.6",
-    "@types/jest": "^24.0.16",
+    "@types/jest": "^24.0.17",
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
     "@types/unist": "^2.0.3",
@@ -34,13 +32,13 @@
     "husky": "^3.0.2",
     "jest": "^24.8.0",
     "lerna": "^3.16.4",
+    "lerna-changelog": "^0.8.2",
     "lint-staged": "^9.2.1",
     "prettier": "1.18.2",
     "prettier-config-1stg": "^0.1.0",
     "react": "^16.8.6",
     "remark-mdx": "^1.1.5",
     "remark-parse": "^7.0.1",
-    "standard-version": "^7.0.0",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
@@ -82,11 +80,5 @@
     "extends": [
       "1stg"
     ]
-  },
-  "standard-version": {
-    "skip": {
-      "bump": true,
-      "tag": true
-    }
   }
 }
