--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: yarn run lerna publish $(jq -r '.version' package.json) --yes && git push --follow-tags origin $TRAVIS_BRANCH || echo "nothing changed to push"
+  script: yarn run lerna publish --yes
   on:
     branch: master
