--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "$schema": "http://json.schemastore.org/lerna",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "changelog": {
@@ -12,7 +12,8 @@
       "allowBranch": "master",
       "conventionalCommits": true,
       "createRelease": "github",
-      "gitReset": false
+      "gitReset": false,
+      "message": "chore(release): %s"
     }
   }
 }
