--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,12 @@ cache:
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH="$HOME/.yarn/bin:$PATH"
+  - curl -o $HOME/gpgkey.asc $GPG_KEY
+  - gpg --import $HOME/gpgkey.asc
   - git config --global user.name 'JounQin'
   - git config --global user.email 'admin@1stg.me'
+  - git config --global commit.gpgsign true
+  - git config --global tag.gpgsign true
 
 install: yarn --frozen-lockfile
 
@@ -22,7 +26,6 @@ script:
   - yarn test
 
 before_deploy:
-  - set -e
   - npm set //registry.npmjs.org/:_authToken $NPM_TOKEN
   - git remote set-url origin https://user:$GH_TOKEN@github.com/$TRAVIS_REPO_SLUG.git
   - git fetch origin $TRAVIS_BRANCH:$TRAVIS_BRANCH
@@ -30,8 +33,13 @@ before_deploy:
   - yarn run lerna-changelog
 
 deploy:
-  provider: script
-  skip_cleanup: true
-  script: yarn run lerna publish --yes
-  on:
-    branch: master
+  - provider: script
+    skip_cleanup: true
+    script: yarn run lerna publish --create-release github --yes
+    on:
+      branch: master
+  - provider: script
+    skip_cleanup: true
+    script: yarn run lerna publish --canary --conventional-prerelease --preid beta --pre-dist-tag beta --yes
+    on:
+      branch: develop
