--- a/lerna.json
+++ b/lerna.json
@@ -1,16 +1,21 @@
 {
   "$schema": "http://json.schemastore.org/lerna",
-  "version": "0.9.7",
+  "version": "0.9.8",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "changelog": {
     "cacheDir": ".cache",
-    "ignoreCommitters": ["*bot"],
+    "ignoreCommitters": [
+      "*bot"
+    ],
     "nextVersion": "Unreleased"
   },
   "command": {
     "version": {
-      "allowBranch": ["develop", "master"],
+      "allowBranch": [
+        "develop",
+        "master"
+      ],
       "conventionalCommits": true,
       "gitReset": false,
       "message": "chore(release): %s"
