--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ script:
   - yarn build
   - yarn test
 
+after_success:
+  - yarn global add codecov
+  - codecov
+
 before_deploy:
   - npm set //registry.npmjs.org/:_authToken $NPM_TOKEN
   - git remote set-url origin https://user:$GH_TOKEN@github.com/$TRAVIS_REPO_SLUG.git
