--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   ],
   "scripts": {
     "build": "tsc -b",
-    "test": "jest",
+    "test": "ts-node -T node_modules/.bin/jest",
     "lint": "EFF_NO_LINK_RULES=true eslint . --ext js,mdx,ts,tsx -f friendly"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^8.1.0",
     "@rxts/eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
-    "@types/eslint": "^4.16.6",
+    "@types/eslint": "^4.16.8",
     "@types/jest": "^24.0.17",
-    "@types/node": "^12.6.9",
-    "@types/react": "^16.8.24",
+    "@types/node": "^12.7.1",
+    "@types/react": "^16.9.1",
     "@types/unist": "^2.0.3",
     "babel-eslint": "^10.0.2",
     "commitlint": "^8.1.0",
@@ -28,16 +28,16 @@
     "eslint-config-1stg": "^5.6.9",
     "eslint-formatter-friendly": "^7.0.0",
     "eslint-mdx": "link:packages/eslint-mdx/src",
-    "eslint-plugin-jest": "^22.14.1",
-    "husky": "^3.0.2",
+    "eslint-plugin-jest": "^22.15.0",
+    "husky": "^3.0.3",
     "jest": "^24.8.0",
     "lerna": "^3.16.4",
     "lerna-changelog": "^0.8.2",
     "lint-staged": "^9.2.1",
     "prettier": "1.18.2",
     "prettier-config-1stg": "^0.1.0",
-    "react": "^16.8.6",
-    "remark-mdx": "^1.1.5",
+    "react": "^16.9.0",
+    "remark-mdx": "^1.2.2",
     "remark-parse": "^7.0.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
@@ -50,6 +50,8 @@
     ]
   },
   "eslintIgnore": [
+    "**/fixtures/**/*.mdx",
+    "coverage",
     "lib",
     "node_modules"
   ],
@@ -60,10 +62,11 @@
     }
   },
   "jest": {
-    "preset": "ts-jest",
+    "collectCoverage": true,
     "modulePathIgnorePatterns": [
       "<rootDir>/packages/"
-    ]
+    ],
+    "preset": "ts-jest"
   },
   "lint-staged": {
     "*.{html,json,md,scss,yml}": [
