--- a/packages/eslint-mdx/package.json
+++ b/packages/eslint-mdx/package.json
@@ -19,5 +19,9 @@
   ],
   "peerDependencies": {
     "eslint": ">=5.0.0"
+  },
+  "dependencies": {
+    "remark-mdx": "^1.2.2",
+    "remark-parse": "^7.0.1"
   }
 }
