--- a/lerna.json
+++ b/lerna.json
@@ -5,20 +5,18 @@
   "useWorkspaces": true,
   "changelog": {
     "cacheDir": ".cache",
-    "ignoreCommitters": [
-      "*bot"
-    ],
+    "ignoreCommitters": ["*bot"],
     "nextVersion": "Unreleased"
   },
   "command": {
     "version": {
-      "allowBranch": [
-        "develop",
-        "master"
-      ],
+      "allowBranch": ["develop", "master"],
       "conventionalCommits": true,
       "gitReset": false,
       "message": "chore(release): %s"
+    },
+    "publish": {
+      "ignoreChanges": ["test", "*.md"]
     }
   }
 }
