--- a/lerna.json
+++ b/lerna.json
@@ -1,22 +1,30 @@
 {
   "$schema": "http://json.schemastore.org/lerna",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "changelog": {
     "cacheDir": ".cache",
-    "ignoreCommitters": ["*bot"],
+    "ignoreCommitters": [
+      "*bot"
+    ],
     "nextVersion": "Unreleased"
   },
   "command": {
     "version": {
-      "allowBranch": ["develop", "master"],
+      "allowBranch": [
+        "develop",
+        "master"
+      ],
       "conventionalCommits": true,
       "gitReset": false,
       "message": "chore(release): %s"
     },
     "publish": {
-      "ignoreChanges": ["test", "*.md"]
+      "ignoreChanges": [
+        "test",
+        "*.md"
+      ]
     }
   }
 }
