feat: all rebass components considered as global variables

--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react": ">=7.0.0"
   },
   "dependencies": {
-    "eslint-mdx": "^0.10.0"
+    "eslint-mdx": "^0.10.0",
+    "rebass": "^4.0.2"
   }
 }
