--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "@types/react": "^16.9.1",
+    "@types/rebass": "^3.0.4",
     "@types/unist": "^2.0.3",
     "babel-eslint": "^10.0.2",
     "commitlint": "^8.1.0",
