--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,6 @@ deploy:
       branch: master
   - provider: script
     skip_cleanup: true
-    script: yarn run lerna publish --canary --conventional-prerelease --preid beta --pre-dist-tag beta --yes
+    script: yarn run lerna publish --canary --conventional-prerelease --force-publish --preid beta --pre-dist-tag beta --yes
     on:
       branch: develop
