--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^8.1.0",
-    "@rxts/eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
     "@types/eslint": "^4.16.8",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
@@ -27,9 +26,11 @@
     "babel-eslint": "^10.0.2",
     "commitlint": "^8.1.0",
     "eslint": "^6.1.0",
-    "eslint-config-1stg": "^5.8.1",
+    "eslint-config-1stg": "^5.8.2-beta.1",
     "eslint-formatter-friendly": "^7.0.0",
     "eslint-mdx": "link:packages/eslint-mdx/src",
+    "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
+    "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.3",
     "jest": "^24.8.0",
     "lerna": "^3.16.4",
