--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rxts/eslint-plugin-mdx",
+  "name": "eslint-plugin-mdx",
   "version": "0.11.2",
   "description": "ESLint Plugin for MDX",
   "repository": "git@github.com:rx-ts/eslint-mdx.git",
