build: bump dependencies, use union @1stg configs, integrate with codacy

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,5 +47,6 @@ deploy:
       branch: develop
 
 after_script:
-  - yarn add -D @codechecks/client @codechecks/build-size-watcher @codechecks/type-coverage-watcher -W
+  - yarn add -D @codechecks/client @codechecks/build-size-watcher @codechecks/type-coverage-watcher codacy-coverage -W
   - yarn codechecks
+  - cat ./coverage/lcov.info | codacy-coverage
