--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@1stg/tsconfig": "^0.1.0",
     "@babel/core": "^7.5.5",
     "@commitlint/config-conventional": "^8.1.0",
+    "@types/cosmiconfig": "^5.0.3",
     "@types/eslint": "^6.1.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
@@ -44,6 +45,8 @@
     "lint-staged": "^9.2.3",
     "prettier": "1.18.2",
     "react": "^16.9.0",
+    "remark-preset-lint-markdown-style-guide": "^2.1.3",
+    "remark-preset-lint-recommended": "^3.0.3",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "type-coverage": "^2.2.0",
@@ -76,6 +79,16 @@
     "preset": "ts-jest"
   },
   "prettier": "@1stg/prettier-config",
+  "remarkConfig": {
+    "settings": {
+      "emphasis": "*",
+      "strong": "*"
+    },
+    "plugins": [
+      "remark-preset-lint-recommended",
+      "remark-preset-lint-markdown-style-guide"
+    ]
+  },
   "renovate": {
     "extends": [
       "@1stg"
