ci: remove from-package flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_deploy:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: yarn run lerna publish from-package --create-release github --yes
+    script: yarn run lerna publish --create-release github --yes
     on:
       branch: master
   - provider: script
