--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "cosmiconfig": "^5.2.1",
     "eslint-mdx": "^1.1.0",
-    "rebass": "^4.0.2",
+    "rebass": "^4.0.5",
+    "remark-lint-file-extension": "^1.0.3",
     "remark-stringify": "^7.0.2"
   }
 }
