--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
       "strong": "*"
     },
     "plugins": [
-      "remark-preset-lint-recommended",
-      "remark-preset-lint-markdown-style-guide"
+      "preset-lint-recommended",
+      "preset-lint-markdown-style-guide"
     ]
   },
   "renovate": {
