--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/babel-preset": "^0.4.2",
-    "@1stg/eslint-config": "^0.2.1",
-    "@1stg/husky-config": "^0.1.0",
-    "@1stg/lint-staged": "^0.2.0",
-    "@1stg/prettier-config": "^0.1.0",
-    "@1stg/tsconfig": "^0.1.0",
+    "@1stg/babel-preset": "^0.5.0",
+    "@1stg/eslint-config": "^0.6.0",
+    "@1stg/husky-config": "^0.3.0",
+    "@1stg/lint-staged": "^0.5.0",
+    "@1stg/prettier-config": "^0.2.0",
+    "@1stg/tsconfig": "^0.3.0",
     "@babel/core": "^7.5.5",
+    "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@types/cosmiconfig": "^5.0.3",
-    "@types/eslint": "^6.1.0",
+    "@types/eslint": "^6.1.1",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
+    "@types/node": "^12.7.3",
     "@types/react": "^16.9.2",
-    "@types/rebass": "^3.0.4",
+    "@types/rebass": "^4.0.0",
     "@types/unist": "^2.0.3",
     "babel-eslint": "^11.0.0-beta.0",
-    "commitlint": "^8.1.0",
-    "eslint": "^6.2.1",
+    "eslint": "^6.3.0",
     "eslint-formatter-friendly": "^7.0.0",
     "eslint-mdx": "link:packages/eslint-mdx/src",
     "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
@@ -42,7 +42,7 @@
     "jest": "^24.9.0",
     "lerna": "^3.16.4",
     "lerna-changelog": "^0.8.2",
-    "lint-staged": "^9.2.3",
+    "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
     "react": "^16.9.0",
     "remark-preset-lint-markdown-style-guide": "^2.1.3",
@@ -50,7 +50,7 @@
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "type-coverage": "^2.2.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.2"
   },
   "commitlint": {
     "extends": [
