--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "lib",
+    "skipLibCheck": true,
     "strictFunctionTypes": false,
     "strictNullChecks": false
   }
