--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
     "react": "^16.9.0",
+    "remark-preset-lint-consistent": "^2.0.3",
     "remark-preset-lint-markdown-style-guide": "^2.1.3",
     "remark-preset-lint-recommended": "^3.0.3",
+    "remark-preset-prettier": "^0.1.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "type-coverage": "^2.2.0",
@@ -83,28 +85,10 @@
   "prettier": "@1stg/prettier-config",
   "remarkConfig": {
     "plugins": [
+      "preset-lint-consistent",
       "preset-lint-recommended",
       "preset-lint-markdown-style-guide",
-      [
-        "lint-list-item-spacing",
-        false
-      ],
-      [
-        "lint-list-item-indent",
-        false
-      ],
-      [
-        "lint-ordered-list-marker-value",
-        false
-      ],
-      [
-        "lint-emphasis-marker",
-        "_"
-      ],
-      [
-        "lint-maximum-line-length",
-        false
-      ]
+      "preset-prettier"
     ]
   },
   "renovate": {
