--- a/package.json
+++ b/package.json
@@ -16,23 +16,26 @@
     "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/babel-preset": "^0.5.0",
-    "@1stg/eslint-config": "^0.6.0",
+    "@1stg/babel-preset": "^0.6.0",
+    "@1stg/browserslist-config": "^0.2.1",
+    "@1stg/eslint-config": "^0.9.0",
     "@1stg/husky-config": "^0.3.0",
-    "@1stg/lint-staged": "^0.5.0",
+    "@1stg/lint-staged": "^0.6.0",
     "@1stg/prettier-config": "^0.2.0",
-    "@1stg/tsconfig": "^0.3.0",
-    "@babel/core": "^7.5.5",
+    "@1stg/remark-config": "^0.2.0",
+    "@1stg/tsconfig": "^0.5.0",
+    "@babel/core": "^7.6.0",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@types/cosmiconfig": "^5.0.3",
     "@types/eslint": "^6.1.1",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.3",
+    "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/rebass": "^4.0.0",
     "@types/unist": "^2.0.3",
     "babel-eslint": "^11.0.0-beta.0",
+    "browserslist": "^4.7.0",
     "eslint": "^6.3.0",
     "eslint-formatter-friendly": "^7.0.0",
     "eslint-mdx": "link:packages/eslint-mdx/src",
@@ -54,6 +57,9 @@
     "type-coverage": "^2.2.0",
     "typescript": "^3.6.2"
   },
+  "browserslist": [
+    "extends @1stg/browserslist-config/latest"
+  ],
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -85,10 +91,7 @@
   "prettier": "@1stg/prettier-config",
   "remarkConfig": {
     "plugins": [
-      "preset-lint-consistent",
-      "preset-lint-recommended",
-      "preset-lint-markdown-style-guide",
-      "preset-prettier"
+      "@1stg/remark-config"
     ]
   },
   "renovate": {
