--- a/packages/eslint-mdx/package.json
+++ b/packages/eslint-mdx/package.json
@@ -21,7 +21,9 @@
     "eslint": ">=5.0.0"
   },
   "dependencies": {
+    "espree": "^6.1.1",
     "remark-mdx": "^1.4.3",
-    "remark-parse": "^7.0.1"
+    "remark-parse": "^7.0.1",
+    "unified": "^8.3.2"
   }
 }
