--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -25,7 +25,10 @@
     "cosmiconfig": "^5.2.1",
     "eslint-mdx": "^1.4.2",
     "rebass": "^4.0.5",
-    "remark-lint-file-extension": "^1.0.3",
-    "remark-stringify": "^7.0.2"
+    "remark-mdx": "^1.4.4",
+    "remark-parse": "^7.0.1",
+    "remark-stringify": "^7.0.2",
+    "vfile": "^4.0.1",
+    "unified": "^8.3.2"
   }
 }
