--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-mdx",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "ESLint Plugin for MDX",
   "repository": "git@github.com:rx-ts/eslint-mdx.git",
   "author": "JounQin <admin@1stg.me>",
@@ -23,12 +23,12 @@
   },
   "dependencies": {
     "cosmiconfig": "^5.2.1",
-    "eslint-mdx": "^1.4.2",
+    "eslint-mdx": "^1.4.3",
     "rebass": "^4.0.5",
     "remark-mdx": "^1.4.4",
     "remark-parse": "^7.0.1",
     "remark-stringify": "^7.0.2",
-    "vfile": "^4.0.1",
-    "unified": "^8.3.2"
+    "unified": "^8.3.2",
+    "vfile": "^4.0.1"
   }
 }
