--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "devDependencies": {
     "@1stg/babel-preset": "^0.6.0",
     "@1stg/browserslist-config": "^0.2.1",
-    "@1stg/eslint-config": "^0.9.0",
+    "@1stg/eslint-config": "^0.9.1",
     "@1stg/husky-config": "^0.3.0",
     "@1stg/lint-staged": "^0.6.0",
     "@1stg/prettier-config": "^0.2.0",
-    "@1stg/remark-config": "^0.2.0",
+    "@1stg/remark-config": "^0.2.1",
     "@1stg/tsconfig": "^0.5.0",
     "@babel/core": "^7.6.0",
     "@commitlint/cli": "^8.1.0",
@@ -48,10 +48,6 @@
     "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
     "react": "^16.9.0",
-    "remark-preset-lint-consistent": "^2.0.3",
-    "remark-preset-lint-markdown-style-guide": "^2.1.3",
-    "remark-preset-lint-recommended": "^3.0.3",
-    "remark-preset-prettier": "^0.1.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "type-coverage": "^2.2.0",
@@ -70,8 +66,7 @@
     "**/fixtures/**/*.mdx",
     "CHANGELOG.md",
     "coverage",
-    "lib",
-    "node_modules"
+    "lib"
   ],
   "jest": {
     "collectCoverage": true,
