--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
     "react": "^16.9.0",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "~24.0.2",
     "ts-node": "^8.4.1",
     "type-coverage": "^2.3.0",
     "typescript": "^3.6.3"
