--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
   - directories:
       - .changelog
 
+env: EFF_NO_LINK_RULES=true
+
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH="$HOME/.yarn/bin:$PATH"
@@ -16,8 +18,8 @@ before_install:
 install: yarn --frozen-lockfile
 
 script:
-  - yarn lint
   - yarn build
+  - yarn lint
   - yarn test
 
 after_success:
