--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-mdx",
+  "name": "@rxts/eslint-mdx",
   "version": "0.0.0",
   "description": "ESLint Parser/Plugin for MDX",
   "repository": "git@github.com:rx-ts/eslint-mdx.git",
@@ -11,22 +11,24 @@
   ],
   "scripts": {
     "build": "tsc -b",
-    "test": "ts-node -T node_modules/.bin/jest",
-    "lint": "EFF_NO_LINK_RULES=true eslint . --ext js,md,mdx,ts,tsx -f friendly",
+    "test": "jest",
+    "lint:es": "eslint . --ext js,md,ts -f friendly",
+    "lint:ts": "tslint -p . -t stylish",
+    "lint": "run-p lint:*",
     "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
-    "@1stg/babel-preset": "^0.6.2",
-    "@1stg/browserslist-config": "^0.2.1",
-    "@1stg/eslint-config": "^0.11.0",
+    "@1stg/babel-preset": "^0.7.0",
+    "@1stg/commitlint-config": "^0.1.0",
+    "@1stg/eslint-config": "^0.12.10",
     "@1stg/husky-config": "^0.3.0",
-    "@1stg/lint-staged": "^0.6.1",
+    "@1stg/lint-staged": "^0.7.4",
     "@1stg/prettier-config": "^0.2.0",
     "@1stg/remark-config": "^0.2.1",
     "@1stg/tsconfig": "^0.5.1",
+    "@1stg/tslint-config": "^0.3.3",
     "@babel/core": "^7.6.0",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
+    "@commitlint/cli": "^8.2.0",
     "@types/cosmiconfig": "^5.0.3",
     "@types/eslint": "^6.1.1",
     "@types/jest": "^24.0.18",
@@ -34,36 +36,27 @@
     "@types/react": "^16.9.2",
     "@types/rebass": "^4.0.0",
     "@types/unist": "^2.0.3",
-    "babel-eslint": "^11.0.0-beta.0",
-    "browserslist": "^4.7.0",
     "eslint": "^6.4.0",
-    "eslint-formatter-friendly": "^7.0.0",
-    "eslint-mdx": "link:packages/eslint-mdx/src",
-    "eslint-plugin-mdx": "link:packages/eslint-plugin-mdx/src",
-    "eslint-plugin-react": "^7.14.3",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "lerna": "^3.16.4",
     "lerna-changelog": "^0.8.2",
     "lint-staged": "^9.2.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "react": "^16.9.0",
-    "ts-jest": "~24.0.2",
-    "ts-node": "^8.4.1",
+    "ts-jest": "^24.1.0",
+    "tslint": "^5.20.0",
     "type-coverage": "^2.3.0",
     "typescript": "^3.6.3"
   },
-  "browserslist": [
-    "extends @1stg/browserslist-config/latest"
-  ],
   "commitlint": {
     "extends": [
-      "@commitlint/config-conventional"
+      "@1stg"
     ]
   },
   "eslintIgnore": [
-    "**/fixtures/**/*.md",
-    "**/fixtures/**/*.mdx",
+    "**/fixtures/**",
     "CHANGELOG.md",
     "coverage",
     "lib"
@@ -78,9 +71,6 @@
         "statements": 100
       }
     },
-    "modulePathIgnorePatterns": [
-      "<rootDir>/packages/"
-    ],
     "preset": "ts-jest"
   },
   "prettier": "@1stg/prettier-config",
