--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint Plugin for MDX",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rx-ts/eslint-mdx.git",
+    "url": "https://github.com/rx-ts/eslint-mdx.git",
     "directory": "packages/eslint-plugin-mdx"
   },
   "author": "JounQin <admin@1stg.me>",
