--- a/packages/eslint-plugin-mdx/tsconfig.json
+++ b/packages/eslint-plugin-mdx/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
+    "baseUrl": ".",
     "composite": true,
     "rootDir": "src",
     "outDir": "lib"
