--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "tsc -b",
-    "test": "jest",
+    "build": "run-p build:*",
+    "build:bundle": "r -x eslint-plugin-react/lib/rules/no-unescaped-entities",
+    "build:ts": "tsc -b",
+    "lint": "run-p lint:*",
     "lint:es": "eslint . --ext js,md,ts -f friendly",
     "lint:ts": "tslint -p . -t stylish",
-    "lint": "run-p lint:*",
+    "lint:tsc": "tsc",
+    "test": "jest",
     "type-coverage": "type-coverage --cache --ignore-catch --detail --ignore-files *.d.ts --strict"
   },
   "devDependencies": {
     "@1stg/babel-preset": "^0.7.0",
     "@1stg/commitlint-config": "^0.1.0",
-    "@1stg/eslint-config": "^0.12.10",
+    "@1stg/eslint-config": "^0.12.12",
     "@1stg/husky-config": "^0.3.0",
     "@1stg/lint-staged": "^0.7.4",
     "@1stg/prettier-config": "^0.2.0",
     "@1stg/remark-config": "^0.2.1",
-    "@1stg/tsconfig": "^0.5.1",
-    "@1stg/tslint-config": "^0.3.3",
+    "@1stg/rollup-config": "^0.9.6",
+    "@1stg/tsconfig": "^0.5.4",
+    "@1stg/tslint-config": "^0.3.4",
     "@babel/core": "^7.6.0",
     "@commitlint/cli": "^8.2.0",
     "@types/cosmiconfig": "^5.0.3",
@@ -44,8 +48,11 @@
     "lint-staged": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
+    "prettier-plugin-pkg": "^0.3.0",
     "react": "^16.9.0",
+    "rollup": "^1.21.4",
     "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "type-coverage": "^2.3.0",
     "typescript": "^3.6.3"
