--- a/packages/eslint-plugin-mdx/package.json
+++ b/packages/eslint-plugin-mdx/package.json
@@ -9,7 +9,10 @@
   "engines": {
     "node": ">=7.0.0"
   },
-  "main": "lib",
+  "main": "lib/es",
+  "module": "lib/esm",
+  "es2015": "lib/es2015",
+  "types": "lib/types",
   "files": [
     "lib",
     "typings.d.ts"
@@ -31,6 +34,7 @@
     "remark-mdx": "^1.4.5",
     "remark-parse": "^7.0.1",
     "remark-stringify": "^7.0.3",
+    "tslib": "^1.10.0",
     "unified": "^8.4.0",
     "vfile": "^4.0.1"
   },
