--- a/packages/eslint-plugin-mdx/tsconfig.json
+++ b/packages/eslint-plugin-mdx/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib/es",
+    "declarationDir": "lib/types"
   }
 }
